--- a/themes/csl/sass/_contact-page.scss
+++ b/themes/csl/sass/_contact-page.scss
@@ -1,6 +1,7 @@
 
 // contact page //
 .page-template-contact{
+
 	.wpcf7-form{
 		background:url('../../images/contact-form-background.png');
 		padding-top:1rem;
@@ -21,27 +22,32 @@
 	.widget-title{
 		font-size:1rem;
 	}
-	.csl-social-media-class{
+	.widget-area{
+		.csl-social-media-class{
+			display:flex;
+			flex-direction: column;
+			margin-left:1rem;
+			z-index:9999;
+			a{
+				color:$black;
+				text-decoration: none;
+				font-size:1rem;
+			}
+			a:hover{
+				color:$teal;
+			}
+			.fa{
+				font-size:2rem;
+				padding-right:1rem;
+			}
+			a:nth-child(3){
+				padding-top:0.5rem;
+			}
+		}
+	}	
+	.social-media-container{
 		display:flex;
-		flex-direction: column;
-		margin-left:1rem;
-		z-index:9999;
-		a{
-			color:$black;
-			text-decoration: none;
-			font-size:1rem;
-			width:20%;
-		}
-		a:hover{
-			color:$teal;
-		}
-		.fa{
-			font-size:2rem;
-			padding-right:1rem;
-		}
-		a:nth-child(3){
-			padding-top:0.5rem;
-		}
+		flex-direction: row;
 	}
 
 	.entry-title{
