--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -2,6 +2,28 @@
 .display{
 	display:block
 }
+.header-widget-area{
+	.csl-social-media-class{
+	display:flex;
+	flex-direction:row;
+	font-size: 2rem;
+	margin-bottom: 0;
+	align-items: flex-end;
+	height: 4rem;
+	}
+	.social-media-container{
+		padding-right:0.5rem;
+	}
+	a{
+		color:white;
+	}
+	a:hover{
+		color:$teal;
+	}
+	p{
+		display:none;
+	}
+}
 .line1, .line2, .line3 {
 	margin-top:5px;
 	background-color:white;
@@ -130,6 +152,9 @@ header{
   }
 // desktop header //
 @media screen  and (min-width:$desktop-width){
+	.site-header{
+		background:$black !important;
+	}
 	.toggle-open{
 		display:none;
 	}
