--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -822,6 +822,33 @@ object {
 .display {
   display: block; }
 
+.header-widget-area .csl-social-media-class {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-size: 2rem;
+  margin-bottom: 0;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  height: 4rem; }
+
+.header-widget-area .social-media-container {
+  padding-right: 0.5rem; }
+
+.header-widget-area a {
+  color: white; }
+
+.header-widget-area a:hover {
+  color: #1DAFB8; }
+
+.header-widget-area p {
+  display: none; }
+
 .line1, .line2, .line3 {
   margin-top: 5px;
   background-color: white;
@@ -946,6 +973,8 @@ header {
   top: -7px; }
 
 @media screen and (min-width: 750px) {
+  .site-header {
+    background: #000000 !important; }
   .toggle-open {
     display: none; }
   .header-logo {
@@ -1141,7 +1170,7 @@ header {
 .page-template-contact .widget-title {
   font-size: 1rem; }
 
-.page-template-contact .csl-social-media-class {
+.page-template-contact .widget-area .csl-social-media-class {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1151,18 +1180,26 @@ header {
           flex-direction: column;
   margin-left: 1rem;
   z-index: 9999; }
-  .page-template-contact .csl-social-media-class a {
+  .page-template-contact .widget-area .csl-social-media-class a {
     color: #000000;
     text-decoration: none;
-    font-size: 1rem;
-    width: 20%; }
-  .page-template-contact .csl-social-media-class a:hover {
+    font-size: 1rem; }
+  .page-template-contact .widget-area .csl-social-media-class a:hover {
     color: #1DAFB8; }
-  .page-template-contact .csl-social-media-class .fa {
+  .page-template-contact .widget-area .csl-social-media-class .fa {
     font-size: 2rem;
     padding-right: 1rem; }
-  .page-template-contact .csl-social-media-class a:nth-child(3) {
+  .page-template-contact .widget-area .csl-social-media-class a:nth-child(3) {
     padding-top: 0.5rem; }
+
+.page-template-contact .social-media-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row; }
 
 .page-template-contact .entry-title {
   position: absolute;
