--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -45,7 +45,7 @@
     text-align: center;
     color: white;
     background-position: bottom;
-    height: 33em;
+    height: 100%;
     position: relative;
     
     
@@ -53,6 +53,7 @@
       text-align: left;
       padding-left: 12vw;
       padding-right: 12vw;
+      margin-bottom: 28%;
     }
   }
   .entry-content{
@@ -71,7 +72,7 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $desktop-width) {
   .home {
     h2 {
       color: white;
@@ -85,7 +86,11 @@
     }
     .desktop-bg {
       background: url(../../images/nature-background.png);
-      background-size: cover;
+      background-color: $teal;
+      background-size: 150%;
+      background-repeat: no-repeat;
+      background-position: bottom right;
+     
     }
     .hero-container {
       background-position: center;
@@ -99,27 +104,31 @@
     }
     .mission-eagles {
         padding-left: 0;
-        padding-bottom: 4em;
         .eagle-left {
           left: 60%;
+          top: 20%;
+          width: 20%;
+        }
+        .eagle-right {
+          top: 80%;
+          width: 18%;
         }
     }
     article {
       background: none;
-      background-size: 20rem;
-      height: 30em;
       text-align: left;
       color: white;
       h2{
-        margin-top: 3rem;
+        margin: 2rem 0 2rem 0;
       }
       p {
         text-align: left;
         padding-left: 2rem;
         padding-right: 2rem;
         margin-top: 0; 
-        margin-right: 14em;
-        font-size: 1.7em;
+        margin-right: 35%;
+        font-size: 1.7rem;
+        margin-bottom: 0; 
       }
     }
     .front-page-news {
@@ -130,26 +139,35 @@
         display: flex;
         justify-content: space-around;
         width: 100%;
-        height: 10em;
-        margin: 4em 0 4em 0;
+        align-items: center;
         .news-archive-image-wrapper {
-          max-width: 33%;
           position: relative;
           overflow: hidden;
-          height: 200px;
+          height: 64%;
+          flex-basis: 30%;
           h3 {
             position: absolute;
+            bottom: 0;
             z-index: 1;
             color: white;
             background-color: rgba(0, 0, 0, 0.5);
-
+            height: 45%;
+            margin: 0;
+            padding: .5rem 1rem 1rem 1rem;
+          }
+          img {
+            width: 125%;
+            max-width: none;
           }
         }
       }
     }
-
+    .front-page-see-more{
+      text-align: center;
+      padding-bottom: 2rem;
+    }
     .front-page-button {
-      display: flex;
+      display: inline-flex;
       justify-content: center;
       position: relative;
       .see-more {
