--- a/themes/csl/sass/_typography.scss
+++ b/themes/csl/sass/_typography.scss
@@ -41,7 +41,7 @@ h2 {
 p {
 	font-size: 18px;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $desktop-width) {
 	h1 {
 		font-size: 36px;
 		font-weight: bold;
