--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -262,7 +262,7 @@ h2 {
 p {
   font-size: 18px; }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 750px) {
   h1 {
     font-size: 36px;
     font-weight: bold; }
@@ -1457,12 +1457,13 @@ object {
   text-align: center;
   color: white;
   background-position: bottom;
-  height: 33em;
+  height: 100%;
   position: relative; }
   .home article p {
     text-align: left;
     padding-left: 12vw;
-    padding-right: 12vw; }
+    padding-right: 12vw;
+    margin-bottom: 28%; }
 
 .home .entry-content {
   margin-top: 0; }
@@ -1473,7 +1474,7 @@ object {
 .home .front-page-button {
   display: none; }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 750px) {
   .home h2 {
     color: white;
     font-size: 3vw;
@@ -1485,7 +1486,10 @@ object {
     padding-left: 1em; }
   .home .desktop-bg {
     background: url(../../images/nature-background.png);
-    background-size: cover; }
+    background-color: #1DAFB8;
+    background-size: 150%;
+    background-repeat: no-repeat;
+    background-position: bottom right; }
   .home .hero-container {
     background-position: center;
     height: 85vh; }
@@ -1495,25 +1499,28 @@ object {
       right: 1%;
       left: auto; }
   .home .mission-eagles {
-    padding-left: 0;
-    padding-bottom: 4em; }
+    padding-left: 0; }
     .home .mission-eagles .eagle-left {
-      left: 60%; }
+      left: 60%;
+      top: 20%;
+      width: 20%; }
+    .home .mission-eagles .eagle-right {
+      top: 80%;
+      width: 18%; }
   .home article {
     background: none;
-    background-size: 20rem;
-    height: 30em;
     text-align: left;
     color: white; }
     .home article h2 {
-      margin-top: 3rem; }
+      margin: 2rem 0 2rem 0; }
     .home article p {
       text-align: left;
       padding-left: 2rem;
       padding-right: 2rem;
       margin-top: 0;
-      margin-right: 14em;
-      font-size: 1.7em; }
+      margin-right: 35%;
+      font-size: 1.7rem;
+      margin-bottom: 0; }
   .home .front-page-news {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1527,22 +1534,34 @@ object {
       -ms-flex-pack: distribute;
           justify-content: space-around;
       width: 100%;
-      height: 10em;
-      margin: 4em 0 4em 0; }
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
       .home .front-page-news .front-page-news-gallery .news-archive-image-wrapper {
-        max-width: 33%;
         position: relative;
         overflow: hidden;
-        height: 200px; }
+        height: 64%;
+        -ms-flex-preferred-size: 30%;
+            flex-basis: 30%; }
         .home .front-page-news .front-page-news-gallery .news-archive-image-wrapper h3 {
           position: absolute;
+          bottom: 0;
           z-index: 1;
           color: white;
-          background-color: rgba(0, 0, 0, 0.5); }
+          background-color: rgba(0, 0, 0, 0.5);
+          height: 45%;
+          margin: 0;
+          padding: .5rem 1rem 1rem 1rem; }
+        .home .front-page-news .front-page-news-gallery .news-archive-image-wrapper img {
+          width: 125%;
+          max-width: none; }
+  .home .front-page-see-more {
+    text-align: center;
+    padding-bottom: 2rem; }
   .home .front-page-button {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
